#################################################################
# EXAMPLES
#################################################################

FILE(GLOB_RECURSE EXAMPLES_SRC *.f90 *.F90)
SET(EXAMPLES_SRC ${EXAMPLES_SRC} PARENT_SCOPE)

#################################################################
# FoX LIBRARIES
#################################################################

LINK_DIRECTORIES(${THIRDPARTY_OUTPUT_PATH}/${FOX_LIB}/lib)
INCLUDE_DIRECTORIES(${THIRDPARTY_OUTPUT_PATH}/${FOX_LIB}/modules)

#################################################################
# EXTERNAL LIBRARIES
#################################################################

FOREACH(EXAMPLE_SRC ${EXAMPLES_SRC})
    GET_FILENAME_COMPONENT(EXE_NAME ${EXAMPLE_SRC} NAME_WE)
    ADD_EXECUTABLE(${EXE_NAME} ${EXAMPLE_SRC})
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${LIB})

    FOREACH(FOX_LIB ${FOX_LIBS})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${FOX_LIB})
    ENDFOREACH()

    IF(${PROJECT_NAME}_ENABLE_MPI)
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${MPI_Fortran_LIBRARIES})
    ENDIF()

    IF(NOT DEFINED HDF5_Fortran_COMPILER_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_HDF5)
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_Fortran_HL_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_HL_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_Fortran_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_dl_LIBRARY_RELEASE})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_m_LIBRARY_RELEASE})
    ENDIF()

    ADD_TEST(${EXE_NAME}_TEST ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
    SET_TESTS_PROPERTIES( ${EXE_NAME}_TEST PROPERTIES LABELS "SERIAL EXAMPLES" )
    IF(MPI_FOUND AND MPIEXEC AND MPIEXEC_NUMPROC_FLAG AND MPIEXEC_MAX_NUMPROCS)
        ADD_TEST(${EXE_NAME}_PARALLEL_TEST ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
        SET_TESTS_PROPERTIES( ${EXE_NAME}_PARALLEL_TEST PROPERTIES LABELS "PARALLEL EXAMPLES" )
    ENDIF()
ENDFOREACH()



