#################################################################
# TESTS
#################################################################

FILE(GLOB_RECURSE TESTS_SRC *.f90 *.F90)
SET(TESTS_SRC ${TESTS_SRC} PARENT_SCOPE)

#################################################################
# FoX LIBRARIES
#################################################################

LINK_DIRECTORIES(${THIRDPARTY_OUTPUT_PATH}/${FOX_LIB}/lib)
INCLUDE_DIRECTORIES(${THIRDPARTY_OUTPUT_PATH}/${FOX_LIB}/modules)

#################################################################
# EXTERNAL LIBRARIES
#################################################################

FOREACH(TEST_SRC ${TESTS_SRC})
    GET_FILENAME_COMPONENT(EXE_NAME ${TEST_SRC} NAME_WE)
    ADD_EXECUTABLE(${EXE_NAME} ${TEST_SRC})
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${LIB})

    FOREACH(FOX_LIB ${FOX_LIBS})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${FOX_LIB})
    ENDFOREACH()

    FOREACH(PENF_LIB ${PENF_LIBS})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${PENF_LIB})
    ENDFOREACH()

    IF(MPI_Fortran_COMPILER AND ${PROJECT_NAME}_ENABLE_MPI)
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${MPI_Fortran_LIBRARIES})
    ENDIF()

    IF(NOT DEFINED HDF5_Fortran_COMPILER_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_HDF5)
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_Fortran_HL_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_HL_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_Fortran_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_LIBRARIES})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_dl_LIBRARY_RELEASE})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${HDF5_m_LIBRARY_RELEASE})
    ENDIF()

    ADD_TEST(${EXE_NAME}_TEST ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
    SET_TESTS_PROPERTIES( ${EXE_NAME}_TEST PROPERTIES LABELS "SERIAL HDF5" )
    IF(MPI_FOUND AND MPIEXEC AND MPIEXEC_NUMPROC_FLAG AND MPIEXEC_MAX_NUMPROCS)
        ADD_TEST(${EXE_NAME}_PARALLEL_TEST ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME})
        SET_TESTS_PROPERTIES( ${EXE_NAME}_PARALLEL_TEST PROPERTIES LABELS "PARALLEL HDF5" )
    ENDIF()
ENDFOREACH()



